# CustomLogger

./: CMakeLists.txt  readme.md
include/: CustomLogger.hpp
src/: CustomLogger.cpp  main.cpp
